--- a/TestPictureBrowser/App.config
+++ b/TestPictureBrowser/App.config
@@ -4,7 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
     <appSettings>
-    <add key="Path" value="C:\Users\Administrator\Pictures\Gif"/>
+    <!-- Set Path to your local folder -->
+    <add key="Path" value="E:\06. 图片\Png"/>
     <add key="Filter" value=".jpg,.png,.bmp,.gif"/>
   </appSettings>
 </configuration>
