--- a/TestPictureBrowser/TestPictureBrowser.csproj
+++ b/TestPictureBrowser/TestPictureBrowser.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TestPictureBrowser</RootNamespace>
-    <AssemblyName>我的图片浏览器</AssemblyName>
+    <AssemblyName>JCPictureBrowser</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -61,12 +61,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\AsyncImage.cs" />
     <Compile Include="CustomSearchControl.xaml.cs">
       <DependentUpon>CustomSearchControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SearchControl.cs" />
-    <Compile Include="ThumbImage.cs" />
-    <Compile Include="Utils\FileHelper.cs" />
+    <Compile Include="Controls\ThumbImage.cs" />
+    <Compile Include="Helpers\AppHelper.cs" />
+    <Compile Include="Helpers\LoadHelper.cs" />
+    <Compile Include="Model\ImageInfo.cs" />
+    <Compile Include="Helpers\FileHelper.cs" />
     <Page Include="CustomSearchControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -91,12 +94,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Style\Image.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Style\ListBoxItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\PictureInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -121,7 +129,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Themes\Image\Next_Hover.png" />
@@ -149,6 +159,10 @@
   <ItemGroup>
     <Resource Include="Themes\Image\Close_Hover.png" />
     <Resource Include="Themes\Image\Close_Press.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Themes\Image\404.png" />
+    <Resource Include="Themes\Image\loading.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
